samples/_failures_safe/1761514932_7e1357_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3376c86a.c: In function ‘main’:
./samples/SAFE/__tmp_3376c86a.c:138:9: error: missing terminating " character
  138 |         "2024-01-15
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_3376c86a.c:138:9: error: expected expression at end of input
./samples/SAFE/__tmp_3376c86a.c:138:9: error: expected declaration or statement at end of input
